fixing spilling

--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,38 +1,54 @@
-html, body {
-    height: 100vh;
-    width: 100vw;
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
     box-sizing: border-box;
-}
-
-/* Editor Styles */
-.quill {
-    height: calc(100vh - 164px);
-    white-space: nowrap;
-    font-family: inherit;
-    font-size: inherit;
-}
-
-.ql-container {
-    font-family: inherit;
-    font-size: inherit;
-}
-
-.ql-editor {
-    font-family: inherit;
-    font-size: inherit;
-    overflow-y: scroll;
-}
-
-/* Sidebar styles */
-.MuiListItem-root.Mui-selected {
-    background-color: #d4d8e8 !important;
-}
-
-.notebooks-link:link {
-    color: darkgrey !important;
-    text-decoration: none !important;
-}
-
-.notebooks-link:visited {
-    color: darkgrey;
-}
+  }
+  /*
+    2. Remove default margin
+  */
+  * {
+    margin: 0;
+  }
+  /*
+    3. Allow percentage-based heights in the application
+  */
+  html, body {
+    height: 100%;
+    background-color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+  }
+  /*
+    Typographic tweaks!
+    4. Add accessible line-height
+    5. Improve text rendering
+  */
+  body {
+    line-height: 1.5;
+    -webkit-font-smoothing: antialiased;
+  }
+  /*
+    6. Improve media defaults
+  */
+  img, picture, video, canvas, svg {
+    display: block;
+    max-width: 100%;
+  }
+  /*
+    7. Remove built-in form typography styles
+  */
+  input, button, textarea, select {
+    font: inherit;
+  }
+  /*
+    8. Avoid text overflows
+  */
+  p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
+  }
+  /*
+    9. Create a root stacking context
+  */
+  #root, #__next {
+    isolation: isolate;
+  }
