--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -4,13 +4,11 @@
     display: flex;
     flex-direction: row;
     height: 50px;
-    width: 97.1%;
     top: 0px;
     left: 0px;
     box-shadow: 1px 1px 8px rgba(112, 111, 111, 0.356);
     justify-content: space-between;
     align-items: center;
-    /* margin-left: 30px; */
     z-index: 1;
 }
 
@@ -29,12 +27,10 @@
 
 
 #logoutButton {
-  /* background-color: green; */
 }
 
 .login{
   display: flex;
-  /* margin-left: 1100px; */
   margin-left: 1000px;
   text-decoration: none;
   background-color: rgb(15, 89, 119);
@@ -73,14 +69,18 @@
   background-color: rgb(15, 89, 119);
   color: white;
   font-weight: bold;
-  padding: 10px;
-  padding-top: 4px;
+  /* padding: 10px; */
+  /* padding-top: 4px; */
   display: flex;
   justify-content: center;
-  height: 20px;
-  width: 70px;
-  margin-top: 8px;
-  margin-bottom: 5px;
+  /* height: 20px; */
+  /* width: 70px; */
+  /* margin-top: 8px;
+  margin-bottom: 5px; */
   border-radius: 20px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#profileButton {
+  text-align: right;
 }
